# super-hero-game

./: .gitignore  Admin.cpp  CMakeLists.txt  Person.cpp  Person.h  Player.cpp  Player.h  README.md  Superhero.cpp  Superhero.h  SuperheroElements.h  main.cpp
ConsoleUtils/: SHGSystem.cpp  SHGSystem.h  SHGSystemCommandStem.cpp  SHGSystemCommandStem.h
Data/: Admin.cpp  Admin.h  Person.h  Player.cpp  Player.h  Superhero.cpp  Superhero.h  SuperheroHolder.cpp  SuperheroHolder.h  SuperheroMode.h  User.cpp  User.h
Exceptions/: IndexOutOfRangeException.cpp  IndexOutOfRangeException.h  InvalidCommandException.cpp  InvalidCommandException.h
Utils/: Array.h  Array.hpp  Logger.cpp  Logger.h  Optional.hpp  Pair.hpp  String.cpp  String.h  UniquePtr.hpp  Utils.cpp  Utils.h
